# healthier

./: .cursorrules  .gitignore  BEST_PRACTICES.md  CREDENTIALS_SETUP.md  DEPLOYMENT_QUICK_REFERENCE.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  PROJECT_CONVENTIONS.md  QUICK_START.md  README.md  TELEGRAM_WEBHOOK_SECRET.md  TESTING_AND_DEPLOYMENT_PLAN.md  render.yaml
backend/: .env.example  .gitignore  AUTH_COMPARISON.md  CONFIGURATION_UPDATED.md  DATABASE_ARCHITECTURE.md  DATABASE_CONFIGURATION_COMPLETE.md  DATABASE_CONNECTION_GUIDE.md  DATABASE_SETUP.md  DEPLOYMENT_READY.md  ENV_REFERENCE.md  MIGRATION_SUMMARY.md  POETRY_SETUP.md  README.md  README_DATABASE_REFACTOR.md  REFACTOR_COMPLETE.md  RENDER_ENV_VARIABLES.md  SUPABASE_AUTH_MIGRATION.md  SUPABASE_CLIENT_SETUP.md  TEST_RESULTS.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/routes/: __init__.py  auth.py  habits.py  routines.py  users.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  security.py  supabase_auth.py
backend/app/models/: __init__.py  base.py  habit.py  routine.py  user.py
backend/app/schemas/: __init__.py  auth.py  habit.py  routine.py  user.py
backend/app/services/: __init__.py  habit_service.py  routine_service.py  user_service.py
backend/migrations/: 001_initial_schema.sql  002_routines.sql  003_habits_exercise.sql  004_scoring_rewards.sql  005_telegram.sql  006_ai_sessions.sql  007_views.sql  008_system_events.sql  009_add_user_password.sql  README.md
backend/tests/: __init__.py  conftest.py  test_auth.py  test_services.py  test_supabase_auth.py
database/schema/: DATABASE_SCHEMA.md
design_docs/: 00_why_ch_health.md  01_product_charter.md  02_mvp_scope_and_features.md  03_routines_and_expiration_model.md  04_exercise_system.md  05_gamification_and_rewards.md  06_telegram_and_vita_architecture.md  07_data_schema_v0.md  08_langgraph_orchestration.md  09_future_stages_and_roadmap.md  10_visual_design_and_brand_direction.md  11_vita_personality_and_voice.md  README.md
frontend/: FORMS_COMPLETE.md  README.md  SETUP_COMPLETE.md  VERCEL_DEPLOYMENT.md  middleware.ts  package-lock.json
frontend/app/: error.tsx  layout.tsx  page.tsx  (+1 more)
plans/: 00_MASTER_PLAN.md  README.md
working_sessions/: .gitkeep  relay-handoff.md
(+29 files in other folders)
